--- a/clubmatcher/static/styles/scss/_global.scss
+++ b/clubmatcher/static/styles/scss/_global.scss
@@ -72,6 +72,12 @@ p {
   font-size: $base;
 }
 
+input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
 .container {
   margin: auto;
 
